--- a/index.html
+++ b/index.html
@@ -556,6 +556,31 @@
                                     </select>
                                     <div class="error-message text-red-500 text-sm mt-1 hidden"></div>
                                 </div>
+                                <div class="col-span-full">
+                                    <label class="block text-sm font-medium text-gray-700 mb-2">O proprietário é o principal condutor?</label>
+                                    <div class="flex items-center space-x-6">
+                                        <label class="flex items-center cursor-pointer">
+                                            <input type="radio" name="proprietario-condutor" value="sim" class="h-4 w-4 text-blue-600 border-gray-300 focus:ring-blue-500" checked>
+                                            <span class="ml-2 text-sm text-gray-700">Sim</span>
+                                        </label>
+                                        <label class="flex items-center cursor-pointer">
+                                            <input type="radio" name="proprietario-condutor" value="nao" class="h-4 w-4 text-blue-600 border-gray-300 focus:ring-blue-500">
+                                            <span class="ml-2 text-sm text-gray-700">Não</span>
+                                        </label>
+                                    </div>
+                                </div>
+                                
+                                <!-- Campos condicionais para o condutor principal -->
+                                <div id="principal-condutor-fields" class="col-span-full grid md:grid-cols-2 gap-6 hidden">
+                                    <div>
+                                        <label for="condutor-nome" class="block text-gray-700 font-semibold mb-2">Nome do Principal Condutor</label>
+                                        <input type="text" id="condutor-nome" name="condutor-nome" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+                                    </div>
+                                    <div>
+                                        <label for="condutor-cpf" class="block text-gray-700 font-semibold mb-2">CPF do Principal Condutor</label>
+                                        <input type="text" id="condutor-cpf" name="condutor-cpf" placeholder="000.000.000-00" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+                                    </div>
+                                </div>
                                 <div>
                                     <label class="block text-gray-700 font-semibold mb-2">Modelo *</label>
                                     <select id="modelo" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent" disabled>
@@ -780,22 +805,28 @@
                     <div class="flex justify-between mt-8">
                         <button type="button" id="prev-btn" class="bg-gray-300 text-gray-800 px-6 py-2 rounded-lg font-semibold hover:bg-gray-400 hidden">Anterior</button>
                         <button type="button" id="next-btn" class="bg-blue-600 text-white px-6 py-2 rounded-lg font-semibold hover:bg-blue-700">Próximo</button>
-                        <button type="submit" id="submit-quote" class="bg-orange-500 text-white px-8 py-4 rounded-lg text-lg font-semibold hover:bg-orange-600 transition duration-300">
-                            Calcular Cotação
+                        <button type="submit" id="submit-quote" class="bg-orange-500 text-white px-8 py-4 rounded-lg text-lg font-semibold hover:bg-orange-600 transition duration-300 hidden">
+                            Enviar Solicitação
                         </button>
                     </div>
                 </fieldset>
 
                 <!-- Resultado da Cotação -->
-                <div id="quote-result" class="mt-8 p-6 bg-green-50 border border-green-200 rounded-lg hidden">
+                <div id="quote-result" class="mt-8 p-8 bg-green-50 border border-green-200 rounded-lg hidden">
                     <div class="text-center">
-                        <h3 class="text-2xl font-bold text-green-800 mb-4">Cotação Calculada</h3>
-                        <div id="quote-result-content"></div>
-                        <p class="text-sm text-green-600 mt-4">
-                            Esta é uma estimativa baseada nos dados fornecidos. Nossa equipe entrará em contato para finalizar sua cotação oficial.
+                        <i class="fas fa-check-circle text-green-500 text-5xl mb-4"></i>
+                        <h3 class="text-2xl font-bold text-green-800 mb-4">Solicitação Enviada!</h3>
+                        <p class="text-green-700 mb-6">
+                            Recebemos seus dados. Em breve, um de nossos especialistas entrará em contato com sua cotação personalizada.
                         </p>
-                        <div class="mt-6">
-                            <button id="recalculate-btn" type="button" class="bg-gray-500 text-white px-6 py-2 rounded-lg font-semibold hover:bg-gray-600 transition duration-300"><i class="fas fa-redo-alt mr-2"></i>Calcular Novamente</button>
+                        <p class="text-gray-600 mb-6">
+                            Se preferir, fale conosco agora mesmo pelo WhatsApp!
+                        </p>
+                        <div class="mt-6 flex flex-col sm:flex-row justify-center items-center gap-4">
+                            <a id="whatsapp-redirect-btn" href="#" target="_blank" class="w-full sm:w-auto bg-green-500 text-white px-8 py-3 rounded-lg text-lg font-semibold hover:bg-green-600 transition duration-300 inline-flex items-center justify-center">
+                                <i class="fab fa-whatsapp mr-3"></i> Falar no WhatsApp
+                            </a>
+                            <button id="recalculate-btn" type="button" class="w-full sm:w-auto bg-gray-500 text-white px-6 py-2 rounded-lg font-semibold hover:bg-gray-600 transition duration-300"><i class="fas fa-redo-alt mr-2"></i>Fazer Nova Cotação</button>
                         </div>
                     </div>
                 </div>
@@ -1406,43 +1437,73 @@
             <div id="modal-body" class="p-8 overflow-y-auto space-y-6 text-gray-700 leading-relaxed">
                 <!-- Conteúdo da Política de Privacidade -->
                 <div id="privacy-policy-content" class="hidden">
-                    <h3 class="text-xl font-semibold mb-4 text-gray-800">1. Coleta de Dados</h3>
-                    <p>Coletamos informações que você nos fornece diretamente através dos formulários de cotação e contato, como: nome, CPF, data de nascimento, e-mail, telefone, endereço e dados específicos do bem a ser segurado (veículo, imóvel, etc.).</p>
+                    <p class="text-sm text-gray-500 mb-4">Última atualização: [INSERIR DATA]</p>
+                    <p class="mb-4">A <strong>SeguroMax Corretora de Seguros</strong>, inscrita no CNPJ [INSERIR CNPJ], com sede em [INSERIR ENDEREÇO], doravante denominada "Controladora", leva a sua privacidade a sério. Esta política descreve como tratamos seus dados pessoais em conformidade com a Lei Geral de Proteção de Dados (LGPD).</p>
 
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">2. Uso das Informações</h3>
-                    <p>As informações coletadas são utilizadas para:</p>
-                    <ul class="list-disc list-inside space-y-2 mt-2">
-                        <li><strong>Gerar simulações de cotação de seguro:</strong> Utilizamos os dados para calcular valores estimados com base em nossas tabelas e algoritmos de simulação.</li>
-                        <li><strong>Contato comercial:</strong> Nossos corretores utilizam seus dados de contato para apresentar a cotação oficial, esclarecer dúvidas e finalizar a contratação do seguro.</li>
-                        <li><strong>Consulta a APIs externas:</strong> Para a cotação de seguro auto, consultamos as APIs ViaCEP (para validação de endereço) e FIPE (para obter o valor de mercado do veículo).</li>
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">1. Quais dados coletamos e por quê?</h3>
+                    <p>Coletamos informações para fornecer e aprimorar nossos serviços de cotação e corretagem de seguros:</p>
+                    <ul class="list-disc list-inside space-y-2 mt-2 pl-4">
+                        <li><strong>Dados Cadastrais:</strong> Nome, CPF, e-mail, telefone, data de nascimento e endereço. São essenciais para identificar você e realizar os procedimentos pré-contratuais da cotação de seguro.</li>
+                        <li><strong>Dados do Risco:</strong> Informações sobre o bem a ser segurado (veículo, imóvel) ou sobre o segurado (profissão, hábitos), necessários para que as seguradoras possam calcular o risco e o valor do prêmio.</li>
+                        <li><strong>Dados de Navegação:</strong> Endereço IP, tipo de navegador e páginas visitadas, coletados via cookies para análise e melhoria do nosso site.</li>
                     </ul>
 
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">3. Natureza da Simulação</h3>
-                    <p class="font-bold">É fundamental que você entenda que os valores apresentados em nosso site são uma SIMULAÇÃO e uma ESTIMATIVA INICIAL.</p>
-                    <p>O cálculo é automatizado e serve como uma primeira referência. O valor final e oficial da sua apólice de seguro só será confirmado após a análise detalhada de um de nossos corretores e o envio da proposta para a seguradora escolhida. Fatores adicionais podem influenciar o preço final.</p>
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">2. Bases Legais para o Tratamento</h3>
+                    <p>O tratamento dos seus dados é realizado com base nas seguintes hipóteses da LGPD:</p>
+                    <ul class="list-disc list-inside space-y-2 mt-2 pl-4">
+                        <li><strong>Execução de procedimentos preliminares a contrato:</strong> Para elaborar e apresentar as cotações de seguro solicitadas por você.</li>
+                        <li><strong>Consentimento:</strong> Para o envio de comunicações e para o compartilhamento de dados com as seguradoras na fase de contratação.</li>
+                        <li><strong>Cumprimento de obrigação legal ou regulatória:</strong> Para atender a exigências de órgãos como a SUSEP.</li>
+                        <li><strong>Legítimo interesse:</strong> Para analisar o desempenho do site e prevenir fraudes.</li>
+                    </ul>
 
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">4. Compartilhamento de Dados</h3>
-                    <p>Seus dados pessoais somente serão compartilhados com as companhias seguradoras no momento da efetivação da proposta de seguro, com o seu consentimento explícito.</p>
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">3. Com quem compartilhamos seus dados?</h3>
+                    <p>Seus dados são compartilhados estritamente para a finalidade de cotação e contratação do seguro:</p>
+                    <ul class="list-disc list-inside space-y-2 mt-2 pl-4">
+                        <li><strong>Companhias Seguradoras:</strong> Para que possam analisar o risco e emitir a apólice.</li>
+                        <li><strong>Provedores de Tecnologia:</strong> Empresas que fornecem as ferramentas para o funcionamento do site, como serviços de hospedagem e APIs (ViaCEP, FIPE).</li>
+                        <li><strong>Autoridades Públicas:</strong> Mediante ordem judicial ou requisição legal.</li>
+                    </ul>
 
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">5. Seus Direitos</h3>
-                    <p>Você tem o direito de solicitar o acesso, a correção ou a exclusão de seus dados pessoais de nossa base a qualquer momento, entrando em contato conosco.</p>
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">4. Por quanto tempo guardamos seus dados?</h3>
+                    <p>Manteremos seus dados pessoais pelo tempo necessário para cumprir a finalidade para a qual foram coletados, incluindo a duração do seu contrato de seguro e os prazos de prescrição legal para o exercício de direitos em processos judiciais ou administrativos.</p>
+
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">5. Seus Direitos como Titular</h3>
+                    <p>Você pode, a qualquer momento, solicitar: a confirmação do tratamento; o acesso aos seus dados; a correção de informações; a anonimização, bloqueio ou eliminação de dados desnecessários; a portabilidade; a eliminação de dados tratados com seu consentimento; e a revogação do consentimento. </p>
+
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">6. Como entrar em contato</h3>
+                    <p>Para exercer seus direitos ou tirar dúvidas, entre em contato com nosso Encarregado de Proteção de Dados (DPO) pelo e-mail: <a href="mailto:dpo@seguromax.com.br" class="text-blue-600 hover:underline">dpo@seguromax.com.br</a>.</p>
+
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">7. Alterações nesta Política</h3>
+                    <p>Esta política pode ser atualizada a qualquer momento. Recomendamos que você a revise periodicamente. A data da última atualização estará sempre indicada no topo do documento.</p>
                 </div>
 
                 <!-- Conteúdo da Política de Cookies -->
                 <div id="cookie-policy-content" class="hidden">
-                    <h3 class="text-xl font-semibold mb-4 text-gray-800">1. O que são Cookies?</h3>
-                    <p>Cookies são pequenos arquivos de texto que os sites armazenam no seu computador ou dispositivo móvel quando você os visita. Eles são amplamente utilizados para fazer os sites funcionarem, ou funcionarem de forma mais eficiente, bem como para fornecer informações aos proprietários do site.</p>
+                    <p class="text-sm text-gray-500 mb-4">Última atualização: [INSERIR DATA]</p>
+                    <p class="mb-4">Esta política explica como a <strong>SeguroMax Corretora de Seguros</strong> utiliza cookies e tecnologias similares para reconhecer você quando visita nosso site.</p>
 
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">2. Como Usamos os Cookies</h3>
-                    <p>Utilizamos cookies para:</p>
-                    <ul class="list-disc list-inside space-y-2 mt-2">
-                        <li><strong>Cookies Essenciais:</strong> Necessários para o funcionamento do site, como manter o progresso do seu formulário de cotação.</li>
-                        <li><strong>Cookies de Desempenho e Análise:</strong> Nos ajudam a entender como os visitantes interagem com nosso site, coletando informações de forma anônima (ex: Google Analytics). Isso nos permite melhorar a experiência do usuário.</li>
-                    </ul>
-                    <p class="mt-4">Não utilizamos cookies para fins de publicidade direcionada.</p>
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">1. O que são cookies?</h3>
+                    <p>Cookies são pequenos arquivos de dados que são colocados no seu computador ou dispositivo móvel quando você visita um site. Eles são amplamente utilizados para fazer os sites funcionarem ou funcionarem de forma mais eficiente, bem como para fornecer informações de relatórios.</p>
 
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">3. Como Gerenciar Cookies</h3>
-                    <p>Você pode controlar e/ou excluir cookies como desejar. A maioria dos navegadores permite que você recuse ou aceite cookies. No entanto, a desativação de cookies essenciais pode afetar a funcionalidade do nosso site, especialmente o preenchimento do formulário de cotação.</p>
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">2. Tipos de cookies que utilizamos</h3>
+                    <div class="space-y-4">
+                        <div>
+                            <h4 class="font-bold text-gray-800">Cookies Estritamente Necessários</h4>
+                            <p class="text-sm">Esses cookies são essenciais para que você possa navegar pelo site e usar seus recursos, como o progresso no formulário de cotação. Sem eles, certas funcionalidades não podem ser fornecidas.</p>
+                        </div>
+                        <div>
+                            <h4 class="font-bold text-gray-800">Cookies de Desempenho e Análise</h4>
+                            <p class="text-sm">Esses cookies coletam informações sobre como os visitantes usam nosso site, de forma anônima. Utilizamos o <strong>Google Analytics</strong> para entender quais páginas são mais visitadas e como podemos melhorar a experiência do usuário. Nenhum dado que identifique você pessoalmente é coletado.</p>
+                        </div>
+                    </div>
+
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">3. Como controlar os cookies</h3>
+                    <p>Você tem o direito de decidir se aceita ou rejeita os cookies. Você pode exercer suas preferências de cookies configurando seu navegador. A maioria dos navegadores permite que você recuse ou aceite todos os cookies, ou aceite apenas certos tipos.</p>
+                    <p class="mt-2 text-sm">Atenção: se você optar por bloquear os cookies estritamente necessários, nosso site pode não funcionar corretamente, e funcionalidades como o formulário de cotação podem ser afetadas.</p>
+
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">4. Alterações nesta Política</h3>
+                    <p>Podemos atualizar esta Política de Cookies de tempos em tempos para refletir, por exemplo, alterações nos cookies que usamos ou por outras razões operacionais, legais ou regulatórias. Por favor, visite esta política regularmente para se manter informado.</p>
                 </div>
             </div>
         </div>
