--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
                 <div class="flex items-center">
                     <div class="py-1"><i class="fas fa-exclamation-triangle text-2xl mr-4"></i></div>
                     <div>
-                        <p class="font-bold text-lg">Atenção: Esta é uma simulação de valores.</p>
-                        <p class="text-sm">Os preços exibidos são estimativas e não representam a cotação final. O valor oficial será confirmado por um de nossos corretores. Ao prosseguir, você declara estar ciente disso e concorda com nossa <a href="/politica-de-privacidade.html" target="_blank" class="font-bold underline hover:text-yellow-900">Política de Privacidade</a>.</p>
+                        <p class="font-bold text-lg">Próximo Passo: Sua Cotação Personalizada</p>
+                        <p class="text-sm">Ao preencher o formulário, você nos enviará os dados necessários para que um de nossos especialistas prepare sua cotação. Não se preocupe, não há contratação automática. Ao prosseguir, você concorda com nossa <a href="/politica-de-privacidade.html" target="_blank" class="font-bold underline hover:text-yellow-900">Política de Privacidade</a>.</p>
                     </div>
                 </div>
                 <div class="mt-4">
@@ -555,31 +555,6 @@
                                         <option value="">Carregando marcas...</option>
                                     </select>
                                     <div class="error-message text-red-500 text-sm mt-1 hidden"></div>
-                                </div>
-                                <div class="col-span-full">
-                                    <label class="block text-sm font-medium text-gray-700 mb-2">O proprietário é o principal condutor?</label>
-                                    <div class="flex items-center space-x-6">
-                                        <label class="flex items-center cursor-pointer">
-                                            <input type="radio" name="proprietario-condutor" value="sim" class="h-4 w-4 text-blue-600 border-gray-300 focus:ring-blue-500" checked>
-                                            <span class="ml-2 text-sm text-gray-700">Sim</span>
-                                        </label>
-                                        <label class="flex items-center cursor-pointer">
-                                            <input type="radio" name="proprietario-condutor" value="nao" class="h-4 w-4 text-blue-600 border-gray-300 focus:ring-blue-500">
-                                            <span class="ml-2 text-sm text-gray-700">Não</span>
-                                        </label>
-                                    </div>
-                                </div>
-                                
-                                <!-- Campos condicionais para o condutor principal -->
-                                <div id="principal-condutor-fields" class="col-span-full grid md:grid-cols-2 gap-6 hidden">
-                                    <div>
-                                        <label for="condutor-nome" class="block text-gray-700 font-semibold mb-2">Nome do Principal Condutor</label>
-                                        <input type="text" id="condutor-nome" name="condutor-nome" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent">
-                                    </div>
-                                    <div>
-                                        <label for="condutor-cpf" class="block text-gray-700 font-semibold mb-2">CPF do Principal Condutor</label>
-                                        <input type="text" id="condutor-cpf" name="condutor-cpf" placeholder="000.000.000-00" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent">
-                                    </div>
                                 </div>
                                 <div>
                                     <label class="block text-gray-700 font-semibold mb-2">Modelo *</label>
@@ -1437,76 +1412,57 @@
             <div id="modal-body" class="p-8 overflow-y-auto space-y-6 text-gray-700 leading-relaxed">
                 <!-- Conteúdo da Política de Privacidade -->
                 <div id="privacy-policy-content" class="hidden">
-                    <p class="text-sm text-gray-500 mb-4">Última atualização: [INSERIR DATA]</p>
-                    <p class="mb-4">A <strong>SeguroMax Corretora de Seguros</strong>, inscrita no CNPJ [INSERIR CNPJ], com sede em [INSERIR ENDEREÇO], doravante denominada "Controladora", leva a sua privacidade a sério. Esta política descreve como tratamos seus dados pessoais em conformidade com a Lei Geral de Proteção de Dados (LGPD).</p>
+                    <h3 class="text-xl font-semibold mb-4 text-gray-800">1. Coleta de Dados</h3>
+                    <p>Coletamos informações que você nos fornece diretamente através dos formulários de cotação e contato, como: nome, CPF, data de nascimento, e-mail, telefone, endereço e dados específicos do bem a ser segurado (veículo, imóvel, etc.).</p>
 
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">1. Quais dados coletamos e por quê?</h3>
-                    <p>Coletamos informações para fornecer e aprimorar nossos serviços de cotação e corretagem de seguros:</p>
-                    <ul class="list-disc list-inside space-y-2 mt-2 pl-4">
-                        <li><strong>Dados Cadastrais:</strong> Nome, CPF, e-mail, telefone, data de nascimento e endereço. São essenciais para identificar você e realizar os procedimentos pré-contratuais da cotação de seguro.</li>
-                        <li><strong>Dados do Risco:</strong> Informações sobre o bem a ser segurado (veículo, imóvel) ou sobre o segurado (profissão, hábitos), necessários para que as seguradoras possam calcular o risco e o valor do prêmio.</li>
-                        <li><strong>Dados de Navegação:</strong> Endereço IP, tipo de navegador e páginas visitadas, coletados via cookies para análise e melhoria do nosso site.</li>
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">2. Uso das Informações</h3>
+                    <p>As informações coletadas são utilizadas para:</p>
+                    <ul class="list-disc list-inside space-y-2 mt-2">
+                        <li><strong>Gerar simulações de cotação de seguro:</strong> Utilizamos os dados para calcular valores estimados com base em nossas tabelas e algoritmos de simulação.</li>
+                        <li><strong>Contato comercial:</strong> Nossos corretores utilizam seus dados de contato para apresentar a cotação oficial, esclarecer dúvidas e finalizar a contratação do seguro.</li>
+                        <li><strong>Consulta a APIs externas:</strong> Para a cotação de seguro auto, consultamos as APIs ViaCEP (para validação de endereço) e FIPE (para obter o valor de mercado do veículo).</li>
                     </ul>
 
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">2. Bases Legais para o Tratamento</h3>
-                    <p>O tratamento dos seus dados é realizado com base nas seguintes hipóteses da LGPD:</p>
-                    <ul class="list-disc list-inside space-y-2 mt-2 pl-4">
-                        <li><strong>Execução de procedimentos preliminares a contrato:</strong> Para elaborar e apresentar as cotações de seguro solicitadas por você.</li>
-                        <li><strong>Consentimento:</strong> Para o envio de comunicações e para o compartilhamento de dados com as seguradoras na fase de contratação.</li>
-                        <li><strong>Cumprimento de obrigação legal ou regulatória:</strong> Para atender a exigências de órgãos como a SUSEP.</li>
-                        <li><strong>Legítimo interesse:</strong> Para analisar o desempenho do site e prevenir fraudes.</li>
-                    </ul>
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">3. Sobre a Solicitação de Cotação</h3>
+                    <p>Ao preencher este formulário, você está solicitando uma cotação de seguro personalizada. Nossos especialistas utilizarão os dados fornecidos para buscar as melhores condições junto às seguradoras parceiras.</p>
+                    <p class="mt-2">A proposta final, com valores e detalhes da cobertura, será apresentada a você por um de nossos corretores. Este não é um processo de contratação automática.</p>
 
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">3. Com quem compartilhamos seus dados?</h3>
-                    <p>Seus dados são compartilhados estritamente para a finalidade de cotação e contratação do seguro:</p>
-                    <ul class="list-disc list-inside space-y-2 mt-2 pl-4">
-                        <li><strong>Companhias Seguradoras:</strong> Para que possam analisar o risco e emitir a apólice.</li>
-                        <li><strong>Provedores de Tecnologia:</strong> Empresas que fornecem as ferramentas para o funcionamento do site, como serviços de hospedagem e APIs (ViaCEP, FIPE).</li>
-                        <li><strong>Autoridades Públicas:</strong> Mediante ordem judicial ou requisição legal.</li>
-                    </ul>
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">4. Compartilhamento de Dados</h3>
+                    <p>Seus dados pessoais somente serão compartilhados com as companhias seguradoras no momento da efetivação da proposta de seguro, com o seu consentimento explícito.</p>
 
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">4. Por quanto tempo guardamos seus dados?</h3>
-                    <p>Manteremos seus dados pessoais pelo tempo necessário para cumprir a finalidade para a qual foram coletados, incluindo a duração do seu contrato de seguro e os prazos de prescrição legal para o exercício de direitos em processos judiciais ou administrativos.</p>
-
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">5. Seus Direitos como Titular</h3>
-                    <p>Você pode, a qualquer momento, solicitar: a confirmação do tratamento; o acesso aos seus dados; a correção de informações; a anonimização, bloqueio ou eliminação de dados desnecessários; a portabilidade; a eliminação de dados tratados com seu consentimento; e a revogação do consentimento. </p>
-
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">6. Como entrar em contato</h3>
-                    <p>Para exercer seus direitos ou tirar dúvidas, entre em contato com nosso Encarregado de Proteção de Dados (DPO) pelo e-mail: <a href="mailto:dpo@seguromax.com.br" class="text-blue-600 hover:underline">dpo@seguromax.com.br</a>.</p>
-
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">7. Alterações nesta Política</h3>
-                    <p>Esta política pode ser atualizada a qualquer momento. Recomendamos que você a revise periodicamente. A data da última atualização estará sempre indicada no topo do documento.</p>
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">5. Seus Direitos</h3>
+                    <p>Você tem o direito de solicitar o acesso, a correção ou a exclusão de seus dados pessoais de nossa base a qualquer momento, entrando em contato conosco.</p>
                 </div>
 
                 <!-- Conteúdo da Política de Cookies -->
                 <div id="cookie-policy-content" class="hidden">
-                    <p class="text-sm text-gray-500 mb-4">Última atualização: [INSERIR DATA]</p>
-                    <p class="mb-4">Esta política explica como a <strong>SeguroMax Corretora de Seguros</strong> utiliza cookies e tecnologias similares para reconhecer você quando visita nosso site.</p>
+                    <h3 class="text-xl font-semibold mb-4 text-gray-800">1. O que são Cookies?</h3>
+                    <p>Cookies são pequenos arquivos de texto que os sites armazenam no seu computador ou dispositivo móvel quando você os visita. Eles são amplamente utilizados para fazer os sites funcionarem, ou funcionarem de forma mais eficiente, bem como para fornecer informações aos proprietários do site.</p>
 
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">1. O que são cookies?</h3>
-                    <p>Cookies são pequenos arquivos de dados que são colocados no seu computador ou dispositivo móvel quando você visita um site. Eles são amplamente utilizados para fazer os sites funcionarem ou funcionarem de forma mais eficiente, bem como para fornecer informações de relatórios.</p>
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">2. Como Usamos os Cookies</h3>
+                    <p>Utilizamos cookies para:</p>
+                    <ul class="list-disc list-inside space-y-2 mt-2">
+                        <li><strong>Cookies Essenciais:</strong> Necessários para o funcionamento do site, como manter o progresso do seu formulário de cotação.</li>
+                        <li><strong>Cookies de Desempenho e Análise:</strong> Nos ajudam a entender como os visitantes interagem com nosso site, coletando informações de forma anônima (ex: Google Analytics). Isso nos permite melhorar a experiência do usuário.</li>
+                    </ul>
+                    <p class="mt-4">Não utilizamos cookies para fins de publicidade direcionada.</p>
 
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">2. Tipos de cookies que utilizamos</h3>
-                    <div class="space-y-4">
-                        <div>
-                            <h4 class="font-bold text-gray-800">Cookies Estritamente Necessários</h4>
-                            <p class="text-sm">Esses cookies são essenciais para que você possa navegar pelo site e usar seus recursos, como o progresso no formulário de cotação. Sem eles, certas funcionalidades não podem ser fornecidas.</p>
-                        </div>
-                        <div>
-                            <h4 class="font-bold text-gray-800">Cookies de Desempenho e Análise</h4>
-                            <p class="text-sm">Esses cookies coletam informações sobre como os visitantes usam nosso site, de forma anônima. Utilizamos o <strong>Google Analytics</strong> para entender quais páginas são mais visitadas e como podemos melhorar a experiência do usuário. Nenhum dado que identifique você pessoalmente é coletado.</p>
-                        </div>
-                    </div>
-
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">3. Como controlar os cookies</h3>
-                    <p>Você tem o direito de decidir se aceita ou rejeita os cookies. Você pode exercer suas preferências de cookies configurando seu navegador. A maioria dos navegadores permite que você recuse ou aceite todos os cookies, ou aceite apenas certos tipos.</p>
-                    <p class="mt-2 text-sm">Atenção: se você optar por bloquear os cookies estritamente necessários, nosso site pode não funcionar corretamente, e funcionalidades como o formulário de cotação podem ser afetadas.</p>
-
-                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">4. Alterações nesta Política</h3>
-                    <p>Podemos atualizar esta Política de Cookies de tempos em tempos para refletir, por exemplo, alterações nos cookies que usamos ou por outras razões operacionais, legais ou regulatórias. Por favor, visite esta política regularmente para se manter informado.</p>
+                    <h3 class="text-xl font-semibold mt-6 mb-4 text-gray-800">3. Como Gerenciar Cookies</h3>
+                    <p>Você pode controlar e/ou excluir cookies como desejar. A maioria dos navegadores permite que você recuse ou aceite cookies. No entanto, a desativação de cookies essenciais pode afetar a funcionalidade do nosso site, especialmente o preenchimento do formulário de cotação.</p>
                 </div>
             </div>
         </div>
+    </div>
+
+    <!-- Cookie Consent Banner -->
+    <div id="cookie-consent-banner" class="hidden fixed bottom-0 left-0 right-0 bg-gray-800 text-white p-4 z-[110] flex flex-col sm:flex-row items-center justify-between gap-4">
+        <p class="text-sm text-gray-300">
+            Este site utiliza cookies para garantir que você obtenha a melhor experiência. Ao continuar a navegar, você concorda com o uso de cookies. Saiba mais em nossa 
+            <a href="#" id="cookie-policy-banner-link" class="font-bold underline hover:text-blue-400">Política de Cookies</a>.
+        </p>
+        <button id="accept-cookies-btn" class="bg-blue-600 text-white px-6 py-2 rounded-lg font-semibold hover:bg-blue-700 transition duration-300 flex-shrink-0">
+            Aceitar
+        </button>
     </div>
 
     <script src="script.js"></script>
