--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
     </section>
 
     <!-- Depoimentos -->
-    <section id="depoimentos" class="py-20 bg-gray-50 section-bg-image" style="background-image: url('https://images.unsplash.com/photo-1543269865-cbf427effbad?q=80&w=2070&auto=format&fit=crop');">
+    <section id="depoimentos" class="py-20 bg-gray-800 section-bg-image">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold text-white mb-4">O que nossos clientes dizem</h2>
